--- a/apps/dash-daq-tektronix350/assets/tektronix.css
+++ b/apps/dash-daq-tektronix350/assets/tektronix.css
@@ -141,6 +141,7 @@ input[type="radio"] {
   margin: 24px;
 }
 
+
 #function-type{
   display: flex;
   width: 80%;
@@ -247,5 +248,29 @@ input[type="radio"] {
     display: block;
     float: none;
   }
+  
+  .logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+  }
+
+  .banner h2{
+    text-align: center;
+    margin: 0 10px;
+  }
+
+  #toggleTheme{
+    width: fit-content;
+    margin: auto;
+  }
+
+  .toggleDiv{
+    margin: 12px auto;
+    width: 100%;
+  }
+
+
 
 }
