--- a/apps/dash-lastodash/assets/style.css
+++ b/apps/dash-lastodash/assets/style.css
@@ -2,132 +2,145 @@
 
 @media print {
     body * {
-	visibility: hidden;
+        visibility: hidden;
     }
 
     html, body {
-	page-break-after: avoid !important;
-	page-break-before: avoid !important;
+        page-break-after: avoid !important;
+        page-break-before: avoid !important;
     }
 
     .page, .page *, #las-curves {
-	visibility: visible;
-	-webkit-print-color-adjust: exact;
+        visibility: visible;
+        -webkit-print-color-adjust: exact;
     }
+
     .section {
-	margin: 0px !important;
-	page-break-before: always;
-	page-break-after: auto;
+        margin: 0px !important;
+        page-break-before: always;
+        page-break-after: auto;
     }
+
     .page {
-	margin: 1.25in;
-	margin-left: 0.25in;
-	border: solid 1px rgba(0,0,0,0)
+        margin: 1.25in;
+        margin-left: 0.25in;
+        border: solid 1px rgba(0,0,0,0)
     }
 
     .section-title {
-	position: relative;
-	top: -10px;
-	background-color: #0057a5 !important;
-	-webkit-print-color-adjust: exact;
-	visibility: visible;
-	font-size: 28pt !important;
-	font-weight: 300 !important;
-	text-align: center;
-	margin-top: 0px !important;
-	padding: 10px !important;
-	width: 300px !important;
-	margin-left: 50px !important;
+        position: relative;
+        top: -10px;
+        background-color: #0057a5 !important;
+        -webkit-print-color-adjust: exact;
+        visibility: visible;
+        font-size: 28pt !important;
+        font-weight: 300 !important;
+        text-align: center;
+        margin-top: 0px !important;
+        padding: 10px !important;
+        width: 300px !important;
+        margin-left: 50px !important;
     }
+
     #las-curves {
-	page-break-after: avoid !important;
-	margin-bottom: -100px !important;
-	margin-left: 20px;
+        page-break-after: avoid !important;
+        margin-bottom: -100px !important;
+        margin-left: 20px;
     }
+
     #frontpage {
-	background-color: rgba(0,0,0,0) !important;
-	margin: 0px;
-	page-break-after: always;
+        background-color: rgba(0,0,0,0) !important;
+        margin: 0px;
+        page-break-after: always;
     }
+
     #frontpage h1 {
-	color: white !important;
+	    color: white !important;
     }
+
     #frontpage, #frontpage * {
-	page-break-after: always;
-	visibility: visible;
-	-webkit-print-color-adjust: exact;
+        page-break-after: always;
+        visibility: visible;
+        -webkit-print-color-adjust: exact;
     }
 
     #las-logo {
-	position: absolute !important;
-	display: block !important;
-	top: 50% !important;
-	padding: 0px !important;
-	margin: 0px !important;
-	right: calc(100% - 420px) !important;
-	height: 182px !important;
-	clip-path: none !important;
+        position: absolute !important;
+        display: block !important;
+        top: 50% !important;
+        padding: 0px !important;
+        margin: 0px !important;
+        right: calc(100% - 420px) !important;
+        height: 182px !important;
+        clip-path: none !important;
     }
+
     #las-header-text {
-	position: absolute !important;
-	top: 50% !important;
-	right: 0px;
-	padding: 50px;
-	background-color: #0057a5;
+        position: absolute !important;
+        top: 50% !important;
+        right: 0px;
+        padding: 50px;
+        background-color: #0057a5;
     }
+
     #las-file-info {
-	font-size: 12pt;
-	margin-left: -5px !important;
-	background-color: #0057a5 !important;
-	color: white !important;
-	padding: 0px;
-	font-weight: 100 !important;
+        font-size: 12pt;
+        margin-left: -5px !important;
+        background-color: #0057a5 !important;
+        color: white !important;
+        padding: 0px;
+        font-weight: 100 !important;
     }
+
     #las-curves {
-	z-index: 0;
-	position: relative;
-	top: -125px;
-	left: -125px;
+        z-index: 0;
+        position: relative;
+        top: -125px;
+        left: -125px;
     }
+
     #las-header-text h1 {
-	font-size: 35pt !important;
-	font-weight: bolder;
-	color: white !important;
+        font-size: 35pt !important;
+        font-weight: bolder;
+        color: white !important;
     }
 
     #las-table {
-	display: none;
+	    display: none;
     }
+
     #las-table-print {
-	margin-top: -150px;
-	display: block !important;
-	page-break-after: always !important;
+        margin-top: -150px;
+        display: block !important;
+        page-break-after: always !important;
     }
+
     #las-table-print table {
-	border-collapse: collapse;
+	    border-collapse: collapse;
     }
 
     #las-table-print th, #las-table-print td {
-	border: 1px solid lightgrey;
-	font-weight: lighter;
-	padding: 4px;
-	font-size: 10pt;
-	text-align: center;
+        border: 1px solid lightgrey;
+        font-weight: lighter;
+        padding: 4px;
+        font-size: 10pt;
+        text-align: center;
     }
 
     .page.tablepage {
-	page-break-after: always;
-	position: relative;
-	left: -100px;
+        page-break-after: always;
+        position: relative;
+        left: -100px;
     }
+
     .tablepage {
-	margin-top: 100px;
-	page-break-after: always;
-	page-break-inside: avoid;
+        margin-top: 100px;
+        page-break-after: always;
+        page-break-inside: avoid;
     }
 
     #las-table-print table > tr > td:nth-child(2), #las-table-print table > tr > td:nth-child(4) {
-	text-align: left;
+	    text-align: left;
     }
 }
 
@@ -137,11 +150,13 @@ body {
     padding: 50px;
     background-color: #F9F9F9;
 }
+
 .section {
     margin: 50px;
     padding: 10px;
     min-width: 850px;
 }
+
 .section-title {
     background-color: #0157A0;
     color: white;
@@ -158,6 +173,7 @@ body {
     padding: 50px;
     background-color: white;
 }
+
 #frontpage {
     margin-top: -30px;
     padding-bottom: 0px;
@@ -180,21 +196,14 @@ body {
     margin-left: 70px;
     font-weight: 100 !important;
 }
+
 #las-logo {
     height: 90px;
     position: relative;
     top: 40px;
     background-color: white;
-    display: inline-block;
-}
-
-.dash-logo {
-    height: 70px;
-    margin-top: 40px;
-    right: 0;
-    position: absolute;
-    padding-right: 120px;
-    
+    margin-right: 20px;
+    display: inline
 }
 
 #frontpage {
@@ -202,25 +211,14 @@ body {
     padding: 10px;
 }
 
-#las-header {
-    display: inline-flex;
-    width: 100%;
+#las-header-text {
+    display: inline;
+    position: relative;
+    top: -10px;
 }
 
-#las-header-text {
-    
-    position: relative;
-    margin-top: 20px;
-    
-}
 #las-header-text h1 {
     position: relative;
-    margin-top: 50px;
-    margin-left: 20px
-}
-
-#las-filename {
-    margin-left: -60px;
 }
 
 #controls {
@@ -293,9 +291,11 @@ body {
     padding: 10px !important;
     text-align: center !important;
 }
+
 #las-table span {
     display: inline-block;
 }
+
 #las-table span.sort {
     font-size: 20pt;
     display: inline-block;
@@ -313,17 +313,21 @@ body {
     padding-bottom: 20px;
     box-shadow: none !important;
 }
+
 #las-table th.dash-header, #las-table th.dash-delete-header {
     top: -10px;
 }
+
 #las-table th.dash-header {
     color: #c3c3c3;
     font-stretch: condensed;
 }
+
 #las-table th.dash-header > div {
     margin: auto;
     display: inline-block;
 }
+
 #las-curves .svg-container {
     margin: auto !important;
 }
@@ -338,6 +342,7 @@ body {
     margin-right: 500px;
     background-color: #191A1C;
 }
+
 #las-table ::-webkit-scrollbar-thumb {
     width: 2px;
     background-color: #E4E4E4;
@@ -374,7 +379,6 @@ body {
     font-size: 10pt;
     text-align: center;
 }
-
 
 #las-table .dash-spreadsheet-container .dash-spreadsheet-inner td.dash-cell.column-0 {
     width:0px !important;
