--- a/apps/dash-ocean-optics/assets/app.css
+++ b/apps/dash-ocean-optics/assets/app.css
@@ -199,11 +199,16 @@ body {
     padding: 10px 0px;
 }
 
-.Select-control,
-.control__dropdowns {
+input[type="text"] {
+    background-color: transparent !important;
+    width: 100% !important;
+    color: white !important;
+}
+
+.control__dropdowns > div > .react-numeric-input {
     width: 100%;
     background-color: transparent !important;
-    border: 1px solid white !important;
+    border: 1px solid #D1D1D1 !important;
     color: white !important;
 }
 
