--- a/apps/dash-ocean-optics/assets/app.css
+++ b/apps/dash-ocean-optics/assets/app.css
@@ -1,175 +1,3 @@
-/* ._dash-undo-redo {
-    display: none;
-  }
-  #page {
-      background-color: #bbbbbb;
-      height: auto;
-      width: 95%;
-      min-width: 1200px;
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      padding: 5%;
-      padding-right: 0%;
-  }
-  #graph-container {
-      background-color: #bbbbbb;
-      width: 70%;
-      min-width: 200px;
-      height: auto;
-      margin-right: 50px;
-      layout: inline-block;
-      position: absolute;
-  }
-  #graph-title {
-      color: #ffffff;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      margin-left: 50px;
-      font-size: 50pt;
-      font-weight: 100;
-      font-variant: small-caps;
-      font-family: Helvetica, sans-serif;
-  }
-  #power-button-container {
-      position: absolute;
-      right: 50px;
-      top: 50px;
-  }
-  #controls {
-      position: relative;
-      margin-top: 25px;
-      overflow: auto;
-      padding-bottom:25px;
-  }
-  #integration-time, #nscans-to-average, #continuous-strobe-toggle, #continuous-strobe-period, #light-source {
-      width: 150px;
-      position: static;
-      float: left;
-      background-color: #bbbbbb;
-      height: 125px;
-      margin: 10px;
-      margin-top: 0px;
-      padding: 10px;
-      padding-top: 0px;
-      padding-bottom: 0px;
-      font-family: Helvetica, sans-serif;
-  }
-  .option-name{
-      padding: none;
-      padding-bottom: 10px;
-      text-align: center;
-      font-variant: small-caps;
-      font-family: Helvetica, sans-serif;
-      font-weight: 100;
-      font-size: 16pt;
-      color: #ffffff;
-  }
-  #status-box {
-      width: 225px;
-      margin-top: 150px;
-      height: 550px;
-      position: relative;
-      left: 80%;
-      padding: 0px;
-      padding-top: 5px;
-      padding-bottom: 5px;
-      border-color: #efefef;
-      border-style: solid;
-      border-width: 1px;
-      border-radius: 5px;
-      font-family: Helvetica, sans-serif;
-      font-size: 14pt;
-      font-variant: small-caps;
-      text-align: center;
-      color: #ffffff;
-      background-color: #bbbbbb;
-  }
-  .status-box-title {
-      font-family: Helvetica, sans-serif;
-      font-size: 14pt;
-      font-variant: small-caps;
-      text-align: center;
-      color: #ffffff;
-  }
-  #autoscale-switch-container {
-      margin-top: 10px;
-  }
-  ::-webkit-scrollbar-track {
-      display:none
-  }
-  #submit-button {
-      font-family: Helvetica, sans-serif;
-      font-size: 20px;
-      font-variant: small-caps;
-      color: #bbbbbb;
-      text-align: center;
-      height: 50px;
-      width: 125px;
-      margin-top: 25px;
-      margin-bottom: 10px;
-      z-index: 10;
-      background-color: #2222ff;
-      position: static;
-      border-width: 1px;
-      border-color: #2222ff;
-      border-radius: 5px;
-      transition-duration: 500ms;
-  }
-  #submit-button:hover {
-      background-color: #bbbbbb;
-      color: #2222ff;
-      cursor: pointer;
-  }
-  #submit-button:active, #submit-button:focus, #submit-button:active:focus{
-      -webkit-box-shadow: none;
-      box-shadow: none;
-      outline: none !important;
-  }
-  #submit-status {
-      width: 175px;
-      border-style: solid;
-      border-color: #dfdfdf;
-      border-width: 1px;
-      height: 150px;
-      padding: 10px;
-      overflow-y: scroll;
-      overflow-x: auto;
-      position: static;
-      margin: auto;
-      margin-top:10px;
-      font-family: Courier, monospace;
-      font-variant: none;
-      text-align: left;
-      font-size: 9pt;
-      color: #efefef;
-      background-color: #bbbbbb;
-  }
-  #infobox {
-      position: static;
-      float: left;
-      width: 700px;
-      padding: 20px;
-      margin: 50px;
-      margin-top: 0px;
-      border-style: solid;
-      border-width: 1px;
-      border-radius: 5px;
-      border-color: #ffffff;
-      color: #ffffff;
-      font-family: Helvetica, sans-serif;
-  }
-  #infobox-title {
-      position: static;
-      width: 100%;
-      text-align: center;
-      font-size: 30pt;
-      padding: 20px;
-      padding-top: 0px;
-      font-variant: small-caps;
-  } */
-
-
 body {
     background-color: #939393;
     color: #F4F6F8;
@@ -180,7 +8,6 @@ body {
 .left__section {
     /* padding: 50px 125px 25px 85px; */
     padding: 30px 70px 70px 70px;
-    /* height: 150vh; */
     background-color: #A5A5A5;
     color: white;
 }
@@ -193,6 +20,7 @@ body {
 .right__section {
     height: 100vh;
     background-color: #939393;
+   color: white;
 }
 
 .control {
@@ -212,37 +40,75 @@ input[type="text"] {
     color: white !important;
 }
 
-.strobe {
-    padding: 10px 0px;
-    display: flex;
-    justify-content: space-between;
-}
-
 input {
     border-radius: 0 !important;
 }
 
-.Select-control {
-    border-radius: 0;
+.Select-control, .Select-multi-value-wrapper, .Select-menu-outer div {
+  background-color: #A5A5A5;
 }
 
-.Select-value-label {
-    color: white !important;
+.Select-control, .Select, .Select-value-label, .Select-clear-zone {
+  color: white;
 }
 
-#my-daq-booleanswitchsss {
+/*Dropdown items*/
+.Select-menu-outer {
+  background-color: #A5A5A5;
+  border: 1px solid #D1D1D1 !important;
+}
+
+/*Dropdown items*/
+.Select-menu-outer div:hover {
+    background: lightgrey;
+  cursor: pointer;
+}
+
+/*Dropdown arrow + delete button*/
+.Select-control, .Select-control > span {
+  color: white;
+  background: #A5A5A5 !important;
+}
+
+/*Placeholder*/
+.Select.has-value.Select--single > .Select-control .Select-value .Select-value-label, .Select.has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
+  color: white !important;
+}
+
+.Select-arrow {
+    border-color: white transparent transparent;}
+
+/*Placeholder*/
+.Select--single > .Select-control .Select-value, .Select-placeholder {
+  border-radius: 2px;
+  background-color: #A5A5A5;
+  cursor: pointer;
+}
+
+
+.Select.is-focused:not(.is-open) > .Select-control {
+  border-color: #A5A5A5 !important;
+}
+
+
+.option-name {
+    padding: 10px 0px;
+}
+
+#autoscale-switch {
     display: flex !important;
 }
 
-#light-intensity-knobss {
+
+#light-intensity-knob-container {
     display: flex;
     justify-content: center;
 }
 
-#submit-buttossn {
+#submit-button {
     width: 100%;
-    background-color: #565656;
-    color: white;
+    background-color: #565656 !important;
+    color: white !important;
     height: 50px;
 }
 
@@ -256,3 +122,4 @@ input {
     padding: 15px;
     border: 1px solid grey;
 }
+
