--- a/apps/dash-ocean-optics/assets/app.css
+++ b/apps/dash-ocean-optics/assets/app.css
@@ -1,48 +1,48 @@
 body {
-    background-color: #939393;
-    color: #F4F6F8;
-    font-family: "Open Sans", sans-serif;
-    margin: 0;
+  background-color: #939393;
+  color: #F4F6F8;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
 }
 
 .left__section {
-    /* padding: 50px 125px 25px 85px; */
-    padding: 30px 70px 70px 70px;
-    background-color: #A5A5A5;
-    color: white;
+  /* padding: 50px 125px 25px 85px; */
+  padding: 30px 70px 70px 70px;
+  background-color: #A5A5A5;
+  color: white;
 }
 
 .logo {
-    height: 60px;
-    width: auto;
+  height: 60px;
+  width: auto;
 }
 
 .right__section {
-    height: 100vh;
-    background-color: #939393;
-    color: white;
-    padding: 30px 70px 70px 70px;
+  height: 100vh;
+  background-color: #939393;
+  color: white;
+  padding: 30px 70px 70px 70px;
 }
 
 .control {
-    padding: 10px 0px;
+  padding: 5px 0px;
 }
 
 input[type="text"] {
-    background-color: transparent !important;
-    width: 100% !important;
-    color: white !important;
+  background-color: transparent !important;
+  width: 100% !important;
+  color: white !important;
 }
 
 .control__dropdowns > div > .react-numeric-input {
-    width: 100%;
-    background-color: transparent !important;
-    border: 1px solid #D1D1D1 !important;
-    color: white !important;
+  width: 100%;
+  background-color: transparent !important;
+  border: 1px solid #D1D1D1 !important;
+  color: white !important;
 }
 
 input {
-    border-radius: 0 !important;
+  border-radius: 0 !important;
 }
 
 .Select-control, .Select-multi-value-wrapper, .Select-menu-outer div {
@@ -61,7 +61,7 @@ input {
 
 /*Dropdown items*/
 .Select-menu-outer div:hover {
-    background: lightgrey;
+  background: lightgrey;
   cursor: pointer;
 }
 
@@ -77,7 +77,8 @@ input {
 }
 
 .Select-arrow {
-    border-color: white transparent transparent;}
+  border-color: white transparent transparent;
+}
 
 /*Placeholder*/
 .Select--single > .Select-control .Select-value, .Select-placeholder {
@@ -93,39 +94,44 @@ input {
 
 
 .option-name {
-    padding: 10px 0px;
+  padding: 10px 0px;
 }
 
 #autoscale-switch {
-    display: flex !important;
+  display: flex !important;
 }
 
-
 #light-intensity-knob-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #submit-button {
-    width: 100%;
-    background-color: #565656 !important;
-    color: white !important;
-    height: 50px;
+  width: 100%;
+  background-color: #565656 !important;
+  color: white !important;
+  height: 50px;
 }
 
 .autoscale {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 #submit-status {
-    margin-top: 15px;
-    padding: 15px;
-    border: 1px solid grey;
+  margin-top: 15px;
+  padding: 15px;
+  border: 1px solid grey;
 }
 
-#power-button-container{
-  display:inline-block;
-  float:right;
+#power-button-container {
+  display: inline-block;
+  float: right;
   margin-top: -20px 10px 10px 10px;
+
+}
+
+
+#spec-readings{
+  margin-top: 30px;
 }
